atuualização foto perfil

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
                             Renato Machado
                         </h1>
                         <h1 class="front-end">
-                            <span>F</span><span>r</span><span>o</span><s>n</s><span>t</span><span>-</span><span>e</span><span>n</span><span>d</span>
+                            Front-End
                         </h1>
                         <p>Estudante de desenvolvimento web com habilidades em criar sites impactantes, além de conhecimentos em Adobe After Effects para design de animações dinâmicas. Habilidades abrangentes em HTML, CSS, JavaScript e Node.js.</p>
                     </div>
-                    <div class="logo_img"></div>
+                    <div class="logo_img">
+                        
+                    </div>
                 </div>
             </div>
         </div>
