--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <h1>
                             Renato Machado
                         </h1>
-                        <h1 class="front-end">
+                        <h1>
                             Front-End
                         </h1>
                         <p>Estudante de desenvolvimento web com habilidades em criar sites impactantes, além de conhecimentos em Adobe After Effects para design de animações dinâmicas. Habilidades abrangentes em HTML, CSS, JavaScript e Node.js.</p>
@@ -87,7 +87,7 @@
                 <h1>Sobre <span>Mim</span></h1>
                 <div class="description">
                     <h3>Olá,bem-vindo ao meu site! Sou Renato Machado, um desenvolvedor web! </h3>
-                    <p>Proficiente em <b>HTML</b>,<b> CSS</b>,<b> JS</b>,<b> Node.js</b> e <b>Figma</b>. Desenvolvo
+                    <p>Proficiente em <b>AFTER EFFECTS</b> ,<b>HTML</b>,<b> CSS</b>,<b> JS</b>,<b> Node.js</b> e <b>Figma</b>. Desenvolvo
                         páginas web envolventes, integro
                         frontend/backend com eficiência e crio interfaces visualmente atraentes. Sempre atualizado,
                         focado em inovação e qualidade.</p>
@@ -138,7 +138,7 @@
                 <div class="projeto-1">
                     <div class="content_link_projeto">
                         <div class="abri_Pagina"><span>Abri projeto</span></div>
-                        <div class="abri_github"><span>Abri Github</span></div>
+                        <div class="abri_github"><span><a href="https://github.com/rennatoGP/portfolio_rennato.git" target="_blank">Abri Github</a></span></div>
 
                     </div>
                     <div class="projeto_descricao">
@@ -373,8 +373,8 @@
     <footer  id="social">
         <div class="footer">
             <ul class="redes_sociais">
-                <li><img src="img/icone_Social/facebook.png" alt="">
-                    <p>facebook</p>
+                <li><img src="img/icone_Social/linkedin.png" alt="">
+                    <p>linkedin</p>
                 </li>
                 <li><img src="img/icone_Social/github.png" alt="">
                     <p>github</p>
