atualização header responsivo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 <body>
     <header id="home">
         <div class="content">
-                    <video autoplay muted id="video-background">
-                        <source src="vedios/new-backgroud-portfolio.mp4" type="video/mp4">
+                    <video autoplay muted id="intro-desktop">
+                        <source src="vedios/intro-desktop-portfolio.mp4" type="video/mp4">
                     </video>
-
+                    <video autoplay muted id="intro-social">
+                        <source src="vedios/intro-rede-social-portfolio.mp4" type="video/mp4">
+                    </video>
         </div>
     </header>
 
