atualização de todo portfolio  com novas palheta de cores

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/depoimentos.css">
     <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/redes-social.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
@@ -21,12 +22,8 @@
 <body>
     <header id="home">
         <div class="content">
-                    <video autoplay muted id="intro-desktop">
-                        <source src="vedios/intro-desktop-portfolio.mp4" type="video/mp4">
-                    </video>
-                    <video autoplay muted id="intro-social">
-                        <source src="vedios/intro-rede-social-portfolio.mp4" type="video/mp4">
-                    </video>
+            <img src="img/an-image-for-a-portfolio-whose-theme-and-motion-design (1).jpg" alt="">
+                  
         </div>
     </header>
 
@@ -47,6 +44,22 @@
     </section>
     <!-- //////////////////////////////////////// -->
     <main>
+        <div class="contet-social">
+            <ul class="redes_sociais">
+                <li><img src="img/icone_Social/linkedin.png" alt="">
+                    <p>linkedin</p>
+                </li>
+                <li><img src="img/icone_Social/github.png" alt="">
+                    <p>github</p>
+                </li>
+                <li><img src="img/icone_Social/instagram (1).png" alt="">
+                    <p>intagram</p>
+                </li>
+                <li><img src="img/icone_Social/whatsapp.png" alt="">
+                    <p>whatsapp</p>
+                </li>
+            </ul>
+        </div>
         <!-- Person Presentation -->
         <sectipon class="Content_Presention" id="sobre">
             <div class="content_animet_Presention">
@@ -359,22 +372,7 @@
     </main>
 
     <footer  id="social">
-        <div class="footer">
-            <ul class="redes_sociais">
-                <li><img src="img/icone_Social/linkedin.png" alt="">
-                    <p>linkedin</p>
-                </li>
-                <li><img src="img/icone_Social/github.png" alt="">
-                    <p>github</p>
-                </li>
-                <li><img src="img/icone_Social/instagram (1).png" alt="">
-                    <p>intagram</p>
-                </li>
-                <li><img src="img/icone_Social/whatsapp.png" alt="">
-                    <p>whatsapp</p>
-                </li>
-            </ul>
-        </div>
+     
         <div class="copyright">&copy;<P>copyright </P><a href="#home"><img src="img/icone_Social/pra-cima.png" alt=""></a></div>
     </footer>
 
