atualização das header cabecalho

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     <header id="home">
         <div class="content">
             <img src="img/an-image-for-a-portfolio-whose-theme-and-motion-design (1).jpg" alt="">
+            <div class="content_welcome">
+                <h1>welcome to</h1>
+                <h2>my</h2>
+                <h2>Portfólio</h2>
+            </div>
         </div>
+       
     </header>
 
     <!-- ===================  menu  ======================== -->
@@ -359,8 +365,8 @@
                     <h2>Contate-me</h2>
                     <input type="text" placeholder="Nome completo">
                     <input type="email" placeholder="Email">
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <button>ENVIAR</button>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="descreva sua pregunta..."></textarea>
+                    <button>enviar</button>
                 </form>
             </div>
         </section>
